--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                       </p>
                     </div>
                     <div class="login-actions">
-                      <button type="submit">Войти</button>
+                      <button class="big-red-button" type="submit">Войти</button>
                       <div class="login-form-links">
                         <a class="login-form-link" href="#">Забыли пароль?</a>
                         <a class="login-form-link" href="#">Новая регистрация</a>
@@ -189,7 +189,7 @@
               <form class="mail-form" method="get" action="http://search.html">
                 <p class="newsletter-p">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
                 <input type="text" id="user-mail" placeholder="Электронная почта">
-                <button type="submit">Отправить</button>
+                <button class="big-red-button" type="submit">Отправить</button>
               </form>
             </section>
           </div>
@@ -223,7 +223,7 @@
               <label for="user-message">Напишите что-нибудь</label>
               <textarea id="user-message" rows="2" placeholder="Напишите что-нибудь..." required></textarea>
             </p>
-            <button type="submit">Отправить</button>
+            <button class="big-red-button" type="submit">Отправить</button>
           </form>
           <button type="submit">Закрыть</button>
         </div>
