feedback-form + script breadcrumbs

--- a/catalog.html
+++ b/catalog.html
@@ -76,7 +76,7 @@
               <a class="user-navigation-item cart-button" href="cart.html">2 товара</a>
               <div class="dropdown-wrapper">
                 <div class="cart-form">
-                  <table>
+                  <table class="cart-form-body">
                     <tr class="product-in-cart">
                       <td class="cart-delete-col">
                         <button class="cart-delete-btn">Удалить</button>
@@ -126,7 +126,7 @@
     <section class="navigation-top">
       <h2 class="visually-hidden">Навигация</h2>
       <ul class="breadcrumbs">
-        <li><a href="#">Главная</a></li>
+        <li><a class="active" href="#">Главная</a></li>
         <li><a class="active" href="#">Каталог</a></li>
         <li><a>Сливочное</a></li>
       </ul>
@@ -199,7 +199,7 @@
                 <label class="filter-form-radio">
                 <input type="radio" name="fat" value="0">
                 <span class="filter-form-radio-icon">
-                  
+
                 </span>
                 <span class="filter-form-radio-label"> выше 30%</span>
               </label>
