footer in catalog

--- a/catalog.html
+++ b/catalog.html
@@ -347,6 +347,38 @@
       </div>
     </section>
   </main>
+
+  <div class="container">
+    <footer class="main-footer">
+      <div class="footer-social">
+        <div>
+          <a class="social-button" id="twitter" href="#"></a>
+        </div>
+        <div>
+          <a class="social-button" id="instagram" href="#"></a>
+        </div>
+        <div>
+          <a class="social-button" id="fb" href="#"></a>
+        </div>
+        <div>
+          <a class="social-button" id="vk" href="#"></a>
+        </div>
+      </div>
+      <div class="footer-info">
+        <ul class="flex-container-footer-info">
+          <li><a class="info-link" id="heart" href="#">Для поставщиков</a></li>
+          <li><a class="info-link" href="#">О производстве</a></li>
+          <li><a class="info-link" href="#">Наши документы</a></li>
+          <li><a class="info-link" href="#">Экологические стандарты</a></li>
+        </ul>
+      </div>
+      <div class="footer-copyright">
+        <p>Сделано в <a class="HTML-Academy" href="https://htmlacademy.ru">HTML
+                Academy</a> @ 2016</p>
+        <img src="img/logo-htmlacademy.svg" alt="логотип htmlacademy" width="108" height="39">
+      </div>
+    </footer>
+  </div>
 </body>
 
 </html>
