--- a/catalog.html
+++ b/catalog.html
@@ -193,35 +193,30 @@
 
           <fieldset class="filter-form-item">
             <legend class="filter-form-title">Наполнители:</legend>
-            <div class="filter-control-wrapper">
+            <div class="filter-control-wrapper fillers-checkboxes">
 
               <label class="filter-checkbox-control">
-                <input type="checkbox" name="filler-chocolate" checked="">
-                <span class="filter-form-checkbox-icon">             </span>
+                <input type="checkbox" name="filler-chocolate" checked>
                 <span class="filter-form-checkbox-label">шоколадные</span>
               </label>
 
               <label class="filter-checkbox-control">
-                <input type="checkbox" name="filler-sugar" checked="">
-                <span class="filter-form-checkbox-icon"></span>
+                <input type="checkbox" name="filler-sugar">
                 <span class="filter-form-checkbox-label">сахарные присыпки</span>
               </label>
 
               <label class="filter-checkbox-control">
-                <input type="checkbox" name="filler-fruit" checked="">
-                <span class="filter-form-checkbox-icon"></span>
+                <input type="checkbox" name="filler-fruit">
                 <span class="filter-form-checkbox-label">фрукты</span>
               </label>
 
               <label class="filter-checkbox-control">
-                <input type="checkbox" name="filler-syrup" checked="">
-                <span class="filter-form-checkbox-icon"></span>
+                <input type="checkbox" name="filler-syrup">
                 <span class="filter-form-checkbox-label">сиропы</span>
               </label>
 
               <label class="filter-checkbox-control">
-                <input type="checkbox" name="filler-jam" checked="">
-                <span class="filter-form-checkbox-icon"></span>
+                <input type="checkbox" name="filler-jam">
                 <span class="filter-form-checkbox-label">джемы</span>
               </label>
 
