--- a/catalog.html
+++ b/catalog.html
@@ -40,7 +40,7 @@
               <a class="user-navigation-item button-search" href="http://search.html"></a>
               <div class="dropdown-wrapper">
                 <form class="search-form" method="get" action="http://search.html">
-                  <input type="text" id="search-input" placeholder="Что ищем?">
+                  <input type="text" class="search-input" placeholder="Что ищем?">
                 </form>
               </div>
             </div>
@@ -323,21 +323,21 @@
     <footer class="main-footer">
       <div class="footer-social">
         <div>
-          <a class="social-button" id="twitter" href="#"></a>
+          <a class="social-button twitter" href="#"></a>
         </div>
         <div>
-          <a class="social-button" id="instagram" href="#"></a>
+          <a class="social-button instagram" href="#"></a>
         </div>
         <div>
-          <a class="social-button" id="fb" href="#"></a>
+          <a class="social-button fb" href="#"></a>
         </div>
         <div>
-          <a class="social-button" id="vk" href="#"></a>
+          <a class="social-button vk" href="#"></a>
         </div>
       </div>
       <div class="footer-info">
         <ul class="flex-container-footer-info">
-          <li><a class="info-link" id="heart" href="#">Для поставщиков</a></li>
+          <li><a class="info-link heart" href="#">Для поставщиков</a></li>
           <li><a class="info-link" href="#">О производстве</a></li>
           <li><a class="info-link" href="#">Наши документы</a></li>
           <li><a class="info-link" href="#">Экологические стандарты</a></li>
@@ -345,7 +345,7 @@
       </div>
       <div class="footer-copyright">
         <p>Сделано в <a class="HTML-Academy" href="https://htmlacademy.ru">HTML
-                Academy</a> @ 2016</p>
+                Academy</a> @ 2019</p>
         <img src="img/logo-htmlacademy.svg" alt="логотип htmlacademy" width="108" height="39">
       </div>
     </footer>
