--- a/catalog.html
+++ b/catalog.html
@@ -19,7 +19,7 @@
         <ul class="site-navigation">
           <li>
             <div class="catalog-dropdown">
-              <a class="site-navigation-items" href="catalog.html">Каталог</a>
+              <a class="site-navigation-items catalog-a" href="catalog.html">Каталог</a>
               <div class="dropdown-wrapper">
                 <ul class="catalog-dropdown-items">
                   <li class="catalog-categories"><a href="#">Новинки</a></li>
