--- a/catalog.html
+++ b/catalog.html
@@ -109,7 +109,7 @@
                   <div class="cart-total">
                     <p>Итого: 750 руб.</p>
                   </div>
-                  <a class="cart-checkout" href="Checkout">Оформить заказ</a>
+                  <a class="cart-checkout" href="checkout">Оформить заказ</a>
                 </div>
               </div>
             </div>
@@ -252,7 +252,7 @@
             <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
           </div>
           <div class="icecream-card">
-            <img src="img/icecream-Creme-brulee.jpg" alt="фото мороженки">
+            <img src="img/icecream-creme-brulee.jpg" alt="фото мороженки">
             <p class="card-price">415 ₽/кг</p>
             <a class="card-name">Сливочное крем-брюле с карамельной подливкой</a>
             <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
