--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
               <p class="address-small">Для заказов по телефону:</p>
               <p class="address-big">8 812 450-25-25</p>
               <p class="address-small">(с 10 до 20 часов)</p>
-              <a class="open-feedback-form" href="#">Форма обратной связи</a>
+              <a class="open-feedback-form" href="form.html">Форма обратной связи</a>
             </div>
           </div>
         </figure>
