--- a/catalog.html
+++ b/catalog.html
@@ -234,73 +234,73 @@
         <h2 class="visually-hidden">Карточки товаров</h2>
         <div class="item-cards-table">
           <div class="icecream-card">
-            <img src="img/icecream-orange.jpg" alt="фото мороженки">
+            <img src="img/icecream-orange.jpg" width="267" height="267" alt="фото мороженки">
             <p class="card-price">310 ₽/кг</p>
             <a class="card-name">Сливочное c апельсиновым джемом и цитрусовой стружкой</a>
             <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
           </div>
           <div class="icecream-card">
-            <img src="img/icecream-coffee.jpg" alt="фото мороженки">
+            <img src="img/icecream-coffee.jpg" width="267" height="267" alt="фото мороженки">
             <p class="card-price">380 ₽/кг</p>
             <a class="card-name">Сливочно-кофейное с кусочками шоколада</a>
             <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
           </div>
           <div class="icecream-card">
-            <img src="img/icecream-strawberry.jpg" alt="фото мороженки">
+            <img src="img/icecream-strawberry.jpg" width="267" height="267" alt="фото мороженки">
             <p class="card-price">355 ₽/кг</p>
             <a class="card-name">Сливочно-клубничное с присыпкой из белого шоколада</a>
             <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
           </div>
           <div class="icecream-card">
-            <img src="img/icecream-creme-brulee.jpg" alt="фото мороженки">
+            <img src="img/icecream-creme-brulee.jpg" width="267" height="267" alt="фото мороженки">
             <p class="card-price">415 ₽/кг</p>
             <a class="card-name">Сливочное крем-брюле с карамельной подливкой</a>
             <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
           </div>
           <div class="icecream-card">
-            <img src="img/icecream-cowberry.jpg" alt="фото мороженки">
+            <img src="img/icecream-cowberry.jpg" width="267" height="267" alt="фото мороженки">
             <p class="card-price">325 ₽/кг</p>
             <a class="card-name">Сливочное c брусничным джемом</a>
             <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
           </div>
           <div class="icecream-card">
-            <img src="img/icecream-blueberries.jpg" alt="фото мороженки">
+            <img src="img/icecream-blueberries.jpg" width="267" height="267" alt="фото мороженки">
             <p class="card-price">410 ₽/кг</p>
             <a class="card-name">Сливочно-черничное с цельным ягодами черники</a>
             <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
           </div>
           <div class="icecream-card">
-            <img src="img/icecream-lemon.jpg" alt="фото мороженки">
+            <img src="img/icecream-lemon.jpg" width="267" height="267" alt="фото мороженки">
             <p class="card-price">375 ₽/кг</p>
             <a class="card-name">Сливочно-лимонное с карамельной присыпкой</a>
             <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
           </div>
           <div class="icecream-card">
-            <img src="img/icecream-chocolate-chips.jpg" alt="фото мороженки">
+            <img src="img/icecream-chocolate-chips.jpg" width="267" height="267" alt="фото мороженки">
             <p class="card-price">320 ₽/кг</p>
             <a class="card-name">Сливочное с шоколадной стружкой</a>
             <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
           </div>
           <div class="icecream-card">
-            <img src="img/icecream-vanilla.jpg" alt="фото мороженки">
+            <img src="img/icecream-vanilla.jpg" width="267" height="267" alt="фото мороженки">
             <p class="card-price">440 ₽/кг</p>
             <a class="card-name">Сливочно-ванильное с кусочками шоколада</a>
             <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
           </div>
           <div class="icecream-card">
-            <img src="img/icecream-menthol.jpg" alt="фото мороженки">
+            <img src="img/icecream-menthol.jpg" width="267" height="267" alt="фото мороженки">
             <p class="card-price">435 ₽/кг</p>
             <a class="card-name">Сливочное с ментоловым сиропом</a>
             <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
           </div>
           <div class="icecream-card">
-            <img src="img/icecream-piece-black-chocolate.jpg" alt="фото мороженки">
+            <img src="img/icecream-piece-black-chocolate.jpg" width="267" height="267" alt="фото мороженки">
             <p class="card-price">355 ₽/кг</p>
             <a class="card-name">Сливочное с кусочками черного шоколада</a>
             <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
           </div>
           <div class="icecream-card">
-            <img src="img/icecream-mint.jpg" alt="фото мороженки">
+            <img src="img/icecream-mint.jpg" width="267" height="267" alt="фото мороженки">
             <p class="card-price">420 ₽/кг</p>
             <a class="card-name">Сливочное с мятным сиропом</a>
             <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
