--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <div class="item-cards-table">
               <div class="icecream-card">
                 <div class="img-wrap">
-                  <img src="img/icecream-orange.jpg" alt="фото мороженки">
+                  <img src="img/icecream-orange.jpg" width="267" height="267" alt="фото мороженки">
                 </div>
                 <p class="card-price">310 ₽/кг</p>
                 <a class="card-name" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
@@ -140,7 +140,7 @@
               </div>
               <div class="icecream-card">
                 <div class="img-wrap">
-                  <img src="img/icecream-coffee.jpg" alt="фото мороженки">
+                  <img src="img/icecream-coffee.jpg" width="267" height="267" alt="фото мороженки">
                 </div>
                 <p class="card-price">380 ₽/кг</p>
                 <a class="card-name" href="#">Сливочно-кофейное с кусочками шоколада</a>
@@ -149,7 +149,7 @@
               </div>
               <div class="icecream-card">
                 <div class="img-wrap">
-                  <img src="img/icecream-strawberry.jpg" alt="фото мороженки">
+                  <img src="img/icecream-strawberry.jpg" width="267" height="267" alt="фото мороженки">
                 </div>
                 <p class="card-price">355 ₽/кг</p>
                 <a class="card-name" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
@@ -158,7 +158,7 @@
               </div>
               <div class="icecream-card">
                 <div class="img-wrap">
-                  <img src="img/icecream-creme-brulee.jpg" alt="фото мороженки">
+                  <img src="img/icecream-creme-brulee.jpg" width="267" height="267" alt="фото мороженки">
                 </div>
                 <p class="card-price">415 ₽/кг</p>
                 <a class="card-name" href="#">Сливочное крем-брюле с карамельной подливкой</a>
